# ProgettoFinale

./: .gitignore  ProgettoFinale.workspace  Progettolog.txt  README.md  log.txt  prova stampa griglia.txt
.codelite/: ProgettoFinale-beatrice.tags  ProgettoFinale-francesco.tags  ProgettoFinale.session
.ctagsd/: file_list.txt  tags.db
C(alabrese)++_2/: CMakeLists.txt  (+3 more)
Consegna/: CMakeLists.txt  README.md  log_cc.txt  log_pc.txt
Consegna/include/: Battleship.h  Grid.h  Match.h  Support.h
Consegna/src/: Battleship.cpp  DefenceGrid.cpp  Grid.cpp  main.cpp  replay.cpp
cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BattagliaNavale.sln  CMakeLists.txt  CMakeListsv1.txt  Griglia.cpp  LEGGIMI.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  battaglia_navale.vcxproj  battaglia_navale.vcxproj.filters  compila esegui partita.bat  compila esegui replay.bat  compila esegui.bat  copia tutto.bat  fai_tutto_in_automatico.bat  fai_tutto_in_automatico_linux.bat  fai_tutto_in_automatico_linux.sh  my_lib.vcxproj  my_lib.vcxproj.filters  replay.vcxproj  replay.vcxproj.filters
cmake/build-config/: log.txt  pippo.txt
cmake/config/: log.txt
cmake/include/: Battleship.h  DefenceGrid.h  Grid.h  Log.h  Match.h  Player.h  Position.h  Ship.h  Submarine.h  Support.h
cmake/my_lib.dir/Debug/my_lib.tlog/: CL.command.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  my_lib.lastbuildstate
cmake/src/: AttackGrid.cpp  Battleship.cpp  CMakeLists.txt  DefenceGrid.cpp  Grid.cpp  Log.cpp  Match.cpp  Player.cpp  Position.cpp  Ship.cpp  Submarine.cpp  Support.cpp  main.cpp  replay.cpp
cmake/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
cmake/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
(+734 files in other folders)
